toolchain: JDK 28 installed and measured; the Valhalla flip is proven on production sources
Temurin 28+16-ea at /opt/jdks/jdk-28+16. Measured, not read: JEP 401 is
preview-gated on this build (isValue() true for value record and value class,
substitutability holds); FFM is final and flag-free (SysVx64Linker). All 37
production sources compile under JDK 28 as-is, and all six vocabulary types
flip with a one-word change and compile under --enable-preview with
isValue() == true at runtime.

Records the obtain route, since most are blocked here: apt, the Adoptium API
and every JDK distribution host are 403 at the egress gateway; anonymous git
ls-remote and GitHub release download paths pass. The EA asset name drops the
28U prefix.

Unblocks ISS-LGJ-TOOLCHAIN-MUST-BE-JDK28-VALHALLA-PANAMA: what remains is the
gate suite against a fresh liblgj_abi.so with re-pinned allocation numbers,
the build scripts carrying the preview flag, and valhalla-lab re-scoped.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01HScwwezRdMxFfTs3WLG19d